--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -23,6 +23,7 @@ jobs:
           cd news_scraper
           pip install -r ../Requirements.txt
           pip install scrapy lxml[html_clean] lxml_html_clean
+          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run Scrapy spider
         run: |
