--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -36,4 +36,4 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add news_scraper/news.json
           git commit -m "Auto-update news.json" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/100rabhsah/ai-news-aggregator.git
