Fixed access issue attempt2

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -31,6 +31,8 @@ jobs:
           scrapy crawl news
 
       - name: Commit and push updated news.json
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
