--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/100rabhsah/ai-news-aggregator.git
           git add news_scraper/news.json
           git commit -m "Auto-update news.json" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/100rabhsah/ai-news-aggregator.git
+          git push origin main
